--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "platzi-intro-react-base",
   "version": "0.1.0",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.6",
+    "@mui/styled-engine-sc": "^5.14.6",
+    "@mui/x-date-pickers": "^6.11.2",
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
+    "dayjs": "^1.11.9",
     "react": "^18",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
